14 feb 2023
===========
 - global badges

12 feb 2023
===========
 - changelog was added
 - Chat.chat_type was renamed to just Chat.type
 - added new type ChatMessage. Currently only used for forwarded messages
 - forwards api was stabilized